Fixed some issues on mobile devices.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,199 +1,191 @@
 body {
   font-family: "Montserrat", sans-serif;
+  text-align: center;
 }
 
-/* title section */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat-Bold", serif;
+}
 
-#title {
-  background-color: #ff4c68;
-  overflow: hidden;
-}
-.container-fluid {
-  padding: 70px;
-  position: relative;
-  bottom: 30px;
-  left: 125px;
-}
 h1 {
-  font-size: 5rem;
   font-weight: bold;
 }
+
 p {
   color: #8f8f8f;
 }
-.main-head {
+
+/* Headings */
+
+.big-heading {
+  font-family: "Montserrat-Black";
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
+
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
   color: #fff;
 }
-button {
-  position: relative;
-  top: 40px;
-  margin: 10px;
-}
-.title-image {
-  width: 45%;
-  transform: rotate(20deg);
-}
 
-/* title section ends*/
-
-/* navigation bar */
-
-.navbar {
-  padding-bottom: 40px;
-  font-family: "Ubuntu", sans-serif;
-}
-.navbar-brand {
-  font-size: 3.5rem;
-}
-.navbar-nav {
-  position: relative;
-  left: 600px;
-}
-.nav-link {
-  font-size: 1.2rem;
-}
-
-/* navigation bar ends*/
-
-/* features */
-
-#features {
-  padding: 7% 15%;
+.white-section {
   background-color: #fff;
 }
 
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat-Light";
+}
+
+/* Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Section */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
+
+/* Features Section */
+
+#features {
+  position: relative;
+}
+
+#features h3 {
+  font-weight: bold;
+}
+
+.feature-title {
+  font-size: 1.5rem;
+}
+
 .feature-box {
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
   padding: 4.5%;
 }
 
 .icon {
-  padding-bottom: 10px;
   color: #ef8172;
+  margin-bottom: 1rem;
 }
 
 .icon:hover {
   color: #ff4c68;
 }
 
-/* features end */
-
-/* testimonials */
+/* Testimonial Section */
 
 #testimonials {
-  padding: 7% 15%;
   background-color: #ef8172;
-  color: #fff;
-  text-align: center;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
   width: 10%;
   border-radius: 100%;
+  margin: 20px;
 }
-
-#testimonials h2 {
-  line-height: 2;
-  padding-bottom: 40px;
-  width: 70%;
-  position: relative;
-  left: 120px;
-}
-
-/* testimonials end */
-
-/* press */
 
 #press {
   background-color: #ef8172;
-  text-align: center;
+  padding-bottom: 3%;
 }
 
 .press-logo {
-  width: 10%;
-  margin: 20px 40px 50px;
+  width: 15%;
+  margin: 20px 20px 50px;
 }
 
-/* press ends*/
+/* Pricing Section */
 
-/* pricing */
-
-#pricing {
-  padding: 5% 4%;
-  text-align: center;
-  line-height: 1.5rem;
-}
-
-main {
-  padding: 30px 40px;
-}
-
-.w-100 {
-  position: relative;
-  right: 2.75%;
-  margin-bottom: 40px;
-}
-
-.btn-new {
+#pricing button {
   background-color: #ef8172;
 }
 
-.btn-new:hover {
-  background-color: #ff4c68;
+#pricing {
+  padding: 100px;
 }
 
-/* pricing ends */
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
 
-/* media break point query */
+.pricing-column {
+  padding: 3% 2%;
+}
+
+/* CTA Section */
+
+/* Footer Section */
+
+.social-icon {
+  margin: 20px 10px;
+}
 
 @media (max-width: 1028px) {
-  .title-image {
-    transform: rotate(0);
-    position: relative;
-    top: 15%;
-  }
-
   #title {
     text-align: center;
-    font-size: 1.5rem;
   }
-  .container-fluid {
-    padding: 50px 10px;
-    position: relative;
-    left: 5%;
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
   }
 }
-
-/* media break point query ends*/
-
-/* call to action */
-
-#cta {
-  background-color: #ff4c68;
-  height: auto;
-  text-align: center;
-  padding: 50px;
-  padding-bottom: 80px;
-}
-
-#cta h3 {
-  font-family: "Montserrat", sans-serif;
-  color: #fff;
-  font-size: 2.2rem;
-  line-height: 1.3;
-}
-
-/* call to action ends*/
-
-/* footer */
-
-#footer {
-  text-align: center;
-  padding: 5% 15%;
-}
-
-#footer i {
-  padding: 10px;
-}
-/* footer ends*/
